src/salesforce/retrieve/metadata/objects/NotificationMessage__c.object
<CustomObject>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>ExternalId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OperationType__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>OperationType</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SObjectType__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>SObjectType</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>NotificationMessage</label>
    <nameField>
        <label>NotificationMessage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NotificationMessages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>